# MoodBridge_Rust

./: .gitignore  7bridgedata_founding_story.md  ACADEMY_LEARNING_PATHS.md  AI_SYSTEM_OVERVIEW.md  BOT_ECOSYSTEM_SUMMARY.md  BROWSER_APPLICATION.md  CODE_REVIEW_ANALYSIS.md  COMPUTATIONAL_ENGINES_README.md  Cargo.toml  DEVOPS_IMPLEMENTATION_GUIDE.md  DEVOPS_IMPLEMENTATION_SUMMARY.md  ENTERPRISE_ENGINEERING_STANDARDS.md  HEIDIMAETL_PROJECT_PLAN.md  IMPLEMENTATION_ROADMAP.md  LOCAL_APP_GUIDE.md  ODASEVA_ENGINEERING_STANDARDS.md  PROJECT_MANAGER_README.md  PROJECT_SPECIFICATION.md  QUICK_START_WHEN_I_RETURN.md  README.md  RUST_EXPERT_ANALYSIS_REPORT.md  TASK_MANAGER.md  TERMINAL_WINDOW_PROCEDURE.md  TESTING_FRAMEWORK.md  TODO_COMPETITIVE_ANALYSIS_IMPLEMENTATION.md  TODO_THREAD_COLLAPSE.md  USER_STORIES.md  VSCODE_IDE_SUMMARY.md  WIZARD_IMPLEMENTATION_SUMMARY.md  academy.html  academy_sample.html  cross_reference_portal_spec.md  devops_commit_checker.sh  devops_config.yaml  devops_dashboard.html  launcher.sh  portal_launcher.html  salesforce_cta_demo.html  send_test_email.py  setup_devops.sh  (+7 more)
MoodBridge-macOS/: Package.swift  README.md  build_and_run.sh
MoodBridge-macOS/.build/: build.db  plugin-tools.yaml  release.yaml  workspace-state.json
MoodBridge-macOS/.build/arm64-apple-macosx/debug/: plugin-tools-description.json
MoodBridge-macOS/.build/arm64-apple-macosx/debug/Alamofire.build/: AFError.d  AFError.swiftdeps  Alamofire.d  Alamofire.emit-module.d  Alamofire.swiftdeps  AlamofireExtended.d  AlamofireExtended.swiftdeps  AuthenticationInterceptor.d  AuthenticationInterceptor.swiftdeps  CachedResponseHandler.d  Combine.d  (+80 more)
MoodBridge-macOS/.build/arm64-apple-macosx/release/: plugin-tools-description.json
MoodBridge-macOS/Sources/: APIService.swift  AnalyticsView.swift  ContentView.swift  DashboardView.swift  DashboardViewModel.swift  Models.swift  ProjectsView.swift  TasksView.swift  main.swift
book_project/: Cargo.toml  README.md
book_project/src/: main.rs  models.rs
book_project/src/agents/: lead_writer.rs  mod.rs
data/: schema.sql
design_system/: seven_bridge_design_system_v1.md
devops_reports/: commit_check_20250630_072616.md  commit_check_20250630_072631.md  commit_check_20250630_073949.md  commit_check_20250630_074035.md  commit_check_20250630_074213.md  commit_check_20250630_074238.md  commit_check_20250630_080929.md  commit_check_20250630_084353.md  commit_check_20250630_092607.md  commit_check_20250630_100810.md  knowledge_base_update_20250630_072616.md  knowledge_base_update_20250630_072631.md  knowledge_base_update_20250630_073949.md  knowledge_base_update_20250630_074035.md  knowledge_base_update_20250630_074213.md  knowledge_base_update_20250630_074238.md  knowledge_base_update_20250630_080929.md  knowledge_base_update_20250630_084353.md  knowledge_base_update_20250630_092607.md  knowledge_base_update_20250630_100810.md  todos_20250630_072616.md  todos_20250630_072631.md  todos_20250630_073949.md  todos_20250630_074035.md  todos_20250630_100810.md
docs/: lexguard_bot_naming.md
docs/academy/: diff-viewer-learning-path.md
docs/api/: diff-viewer.md
docs/nonprofit/: NONPROFIT_PORTAL_SPECIFICATION.md
examples/: comprehensive_bot_demo.rs  computational_engine_demo.rs  salesforce_cta_demo.rs
project_recommendations/: 01_CODE_QUALITY_ANALYSIS.md  IMPLEMENTATION_PROGRESS.md  Project_Review.md
scripts/: new-terminal-window.sh  setup-aliases.sh
seven_bridge_portal/content/books/bridge-01-technical/: index.md
seven_bridge_portal/static/css/: bridge-portal.css
seven_bridge_portal/static/js/: bridge-portal.js
src/: config.rs  error.rs  lib.rs  main.rs  main_demo.rs
src/ai/: analytics.rs  core_engine.rs  fabric_integration.rs  knuthian_analytics.rs  llm.rs  mod.rs  patterns.rs
src/algorithms/: cache_oblivious.rs  mod.rs  probabilistic.rs  suffix_tree.rs
src/auth/: kms.rs  mod.rs
src/bicycle/: aerodynamics.rs  design.rs  handlers.rs  materials.rs  mod.rs  optimization.rs  physics.rs  simulation.rs  testing.rs  wizard.rs
src/bots/: analytics_reporting_bot.rs  case_constructor.rs  deadline_management_bot.rs  document_management_bot.rs  email_notification_bot.rs  legal_ethics_compliance_bot.rs  mod.rs  salesforce_cta_bot.rs
src/browser/: bookmarks.rs  engine.rs  extensions.rs  history.rs  mod.rs  models.rs  security.rs  tabs.rs
src/crypto_db/: encryption.rs  index.rs  mod.rs  storage.rs
src/db/: mod.rs
src/demo_app/: audit_trail.rs  compliance_engine.rs  data_archival.rs  demo_wizard.rs  integration_manager.rs  mod.rs  regulatory_framework.rs  reporting_dashboard.rs  risk_assessment.rs  ui_components.rs
src/etl/: mod.rs  verb_engine.rs
src/handlers/: legal_analysis.rs  mod.rs  project.rs
src/import_wizard/: classifier.rs  config.rs  crypto.rs  metadata.rs  mod.rs
src/integrations/: computational.rs  mod.rs
src/integrations/engines/: mod.rs  openai.rs  sympy.rs  wolfram_alpha.rs
src/integrations_disabled/: mod.rs
src/legal/: access_control.rs  audit_log.rs  compliance_check.rs  consent.rs  disclaimers.rs  mod.rs
src/models/: mod.rs  requests.rs
src/nonprofit/: handlers.rs  models.rs  services.rs
src/portals/: analytics_reporting_portal.rs  deadline_management_portal.rs  document_management_portal.rs  email_notification_portal.rs  mod.rs  portal_handlers.rs  salesforce_cta_portal.rs
src/trailhead/: mod.rs  trails.rs
src/warp_command/: activity_tracker.rs  email_service.rs  log_analyzer.rs  mod.rs  report_generator.rs  scheduler.rs  self_improvement.rs
src/wizard/: case_wizard.rs  financial_services_wizard.rs  handlers.rs  integration_wizard.rs  mod.rs  project_wizard.rs  steps.rs
static/css/: salesforce-design-system.css
templates/: academy_home.html  academy_paths.html  dashboard.html  diff_viewer.html  legal_hub.html  project_dashboard.html  vscode-dashboard.html
tests/: ai_analytics_tests.rs  ai_engine_tests.rs  api_tests.rs  database_tests.rs  diff_viewer_integration.rs  fabric_integration_tests.rs  llm_tests.rs  models_tests.rs  patterns_tests.rs  performance_tests.rs
todo-enterprise/: TODO.md
(+1011 files in other folders)
