[package]
name = "moodbridge_rust"
version = "0.1.0"
edition = "2021"
authors = ["Legal Technology Solutions <contact@example.com>"]
description = "Enterprise-grade legal dashboard with AI analytics and compliance"
license = "MIT"
repository = "https://github.com/example/moodbridge_rust"
documentation = "https://docs.rs/moodbridge_rust"
keywords = ["legal", "analytics", "compliance", "dashboard", "ai"]
categories = ["web-programming", "database"]
readme = "README.md"

[dependencies]
# Web Framework & HTTP
axum = { version = "0.7", features = ["multipart", "ws"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "add-extension", "set-header", "limit", "timeout"] }
hyper = { version = "1.0", features = ["full"] }

# Database & Persistence
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate", "json"] }
sea-query = "0.30"
sea-query-binder = { version = "0.5", features = ["sqlx-sqlite"] }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization & Data
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Security & Authentication
jsonwebtoken = "9.0"
argon2 = "0.5"
rand = "0.8"
ring = "0.17"
aes-gcm = "0.10"

# Validation & Input Sanitization
validator = { version = "0.18", features = ["derive"] }
ammonia = "4.0"

# Error Handling & Logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-appender = "0.2"
sentry = { version = "0.32", features = ["tracing"] }

# HTTP Client & External APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls", "gzip", "brotli", "stream"] }

# Configuration & Environment
config = "0.14"
dotenvy = "0.15"

# Monitoring & Metrics
prometheus = "0.13"
metrics = "0.23"
metrics-prometheus = "0.7"

# Rate Limiting & Security
tower_governor = "0.3"
headers = "0.3"

# Testing (dev dependencies)
[dev-dependencies]
tokio-test = "0.4"
httpmock = "0.6"
fake = { version = "2.8", features = ["chrono", "uuid"] }
proptest = "1.0"
insta = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

