[package]
name = "moodbridge_rust"
version = "0.1.0"
edition = "2021"
authors = ["Legal Technology Solutions <contact@example.com>"]
description = "High-performance legal dashboard in Rust with SQLite and Axum"

[lib]
name = "moodbridge_rust"
path = "src/lib.rs"

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4", features = ["cors", "fs"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-util = { version = "0.7", features = ["io"] }
multipart = "0.18"
sha2 = "0.10"
hex = "0.4"
mime_guess = "2.0"
base64 = "0.21"
# WARP COMMAND system dependencies
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-native-tls", "pool"] }
cron = "0.12"
regex = "1.10"
clap = { version = "4.0", features = ["derive"] }
tokio-cron-scheduler = "0.9"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
urlencoding = "2.1"
regex = "1.10"
# Wizard dependencies (already covered by existing dependencies)
# uuid, chrono, serde, serde_json, async-trait, anyhow are already included
